--- a/frontend/src/components/navbar.css
+++ b/frontend/src/components/navbar.css
@@ -5,7 +5,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1.5rem 1rem;
+  padding: 1.5rem 4rem;
 
   z-index: 50;
 }
@@ -81,7 +81,11 @@
 .hamburger__menu:hover > div {
   background: #dd21dd;
 }
-
+@media (max-width: 1450px) {
+  .navbar {
+    padding: 1.5rem 1rem;
+  }
+}
 @media (max-width: 960px) {
   .navbar__links {
     display: none;
